--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -1204,7 +1204,7 @@ exception, though returning a defined value after catching an exception
 is okay.
 
 In the absence of error exception propagation, a successful exit is one that
-returns a defined value in scalar context, or any number of values
+returns a defined value in item context, or any number of values
 in list context as long as the length is defined.  (A length of +Inf
 is considered a defined length.  A length of 0 is also a defined length,
 which means it's a "successful" return even though the list would evaluate
@@ -1216,7 +1216,7 @@ So any Perl 6 function can say
 
     fail "message";
 
-and not care about whether the function is being called in scalar or list
+and not care about whether the function is being called in item or list
 context.  To return an explicit scalar undef, you can always say
 
     return undef;
