typos from Aaron Crane++ more (assignment, self-extending array, reification).semantics
git-svn-id: http://svn.pugscode.org/pugs@23974 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -3236,7 +3236,7 @@ then evaluated lazily.
 To force non-lazy list flattening, use the C<eager> list operator.
 Don't use it on an infinite list unless you have a machine with
 infinite memory, and are willing to wait a long time.  To expand an
-interator object to completion, iterate it with C<< prefix:<=> >>
+iterator object to completion, iterate it with C<< prefix:<=> >>
 inside an eager list:
 
     @lines = eager =$filehandle;    # read all remaining lines
