typo from cognominal++
git-svn-id: http://svn.pugscode.org/pugs@23979 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -269,7 +269,7 @@ so to return a value from this iteration of the current block you can say:
 
     &?BLOCK.next($retval);
 
-[Conjecuture: a bare C<next($retval)> function could be taught to do
+[Conjecture: a bare C<next($retval)> function could be taught to do
 the same, as long as C<$retval> isn't a loop label.  Presumably multiple
 dispatch could sort this out.]
 
